--- a/index.html
+++ b/index.html
@@ -450,8 +450,137 @@
               </li>
             </ul>
           </div>
+       
+         <div class="footer-subs-link">
+          <p class="footer-subs-text">Subscribe</p>
+          <form class="email">
+            <label class="footer-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe" type="submit">
+              Subscribe
+              <svg class="icon-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
+       </div>
     </footer>
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button type="button" class="modal-close-btn">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-Vector"></use>
+          </svg>
+        </button>
+        <p class="modal-paragraf">
+          Leave your contacts and we will call you back
+        </p>
+         <form class="form">
+          <div class="data-client">
+            <!-- =====Name===== -->
+            <label class="name-forma" for="user-name">Name</label>
+            <div class="icon-input">
+              <input
+                id="user-name"
+                name="user-name"
+                class="input-forma"
+                type="text"
+                placeholder="Name"
+              />
+              <svg class="icon-forma" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="data-client">
+            <!-- =====Phone===== -->
+            <label class="name-forma" for="phone">Phone</label>
+            <div class="icon-input">
+              <input
+                id="phone"
+                name="phone"
+                class="input-forma"
+                type="text"
+                placeholder="Phone"
+              />
+              <svg class="icon-forma" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="data-client">
+            <!-- =====Email===== -->
+            <label class="name-forma" for="email">Email</label>
+            <div class="icon-input">
+              <input
+                id="email"
+                name="email"
+                class="input-forma"
+                type="text"
+                placeholder="E-mail"
+              />
+              <svg class="icon-forma" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+
+          <!-- =====client-coment===== -->
+          <div class="client-coment">
+            <label class="name-forma" for="user-comment">Comment</label>
+            <textarea
+              class="coments"
+              name="user-comment"
+              id="user-comment"
+              cols="30"
+              rows="10"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <!-- =====user-privacy===== -->
+          <div class="user-privacy">
+            <input
+              id="user-privacy"
+              class="checkbox visually-hidden"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+            />
+            <label for="user-privacy" class="privaci-accept">
+              <span class="privacy-policy">
+                <!-- Privacy Policy -->
+                <svg class="modal-check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector-1"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the&nbsp;
+              <a
+                class="link-privacy-policy"
+                href=""
+                >Privacy Policy
+                </a
+              >
+            </label>
+          </div>
+          <button class="botton-modal-forma" type="button">Send</button>
+
+          <!-- <button class="botton-modal-forma" type="button">Send</button> -->
+        </form>
+      </div>
+    </div>
+
+        
+    </div>
   </body>
 </html>
