--- a/index.html
+++ b/index.html
@@ -450,28 +450,28 @@
               </li>
             </ul>
           </div>
-       
-         <div class="footer-subs-link">
-          <p class="footer-subs-text">Subscribe</p>
-          <form class="email">
-            <label class="footer-label">
-              <input
-                class="footer-input"
-                type="email"
-                name="email"
-                placeholder="E-mail"
-              />
-            </label>
-            <button class="subscribe" type="submit">
-              Subscribe
-              <svg class="icon-footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-Frame-3"></use>
-              </svg>
-            </button>
-          </form>
+
+          <div class="footer-subs-link">
+            <p class="footer-subs-text">Subscribe</p>
+            <form class="email">
+              <label class="footer-label">
+                <input
+                  class="footer-input"
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button class="subscribe" type="submit">
+                Subscribe
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-Frame-3"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
-       </div>
     </footer>
     <div class="backdrop is-open">
       <div class="modal">
@@ -483,7 +483,7 @@
         <p class="modal-paragraf">
           Leave your contacts and we will call you back
         </p>
-         <form class="form">
+        <form class="form">
           <div class="data-client">
             <!-- =====Name===== -->
             <label class="name-forma" for="user-name">Name</label>
@@ -565,12 +565,7 @@
                 </svg>
               </span>
               I accept the terms and conditions of the&nbsp;
-              <a
-                class="link-privacy-policy"
-                href=""
-                >Privacy Policy
-                </a
-              >
+              <a class="link-privacy-policy" href="">Privacy Policy </a>
             </label>
           </div>
           <button class="botton-modal-forma" type="button">Send</button>
@@ -578,9 +573,6 @@
           <!-- <button class="botton-modal-forma" type="button">Send</button> -->
         </form>
       </div>
-    </div>
-
-        
     </div>
   </body>
 </html>
