--- a/index.html
+++ b/index.html
@@ -450,25 +450,26 @@
               </li>
             </ul>
           </div>
-
-          <div class="footer-subs-link">
-            <p class="footer-subs-text">Subscribe</p>
-            <form class="email">
-              <label class="footer-label">
-                <input
-                  class="footer-input"
-                  type="email"
-                  name="email"
-                  placeholder="E-mail"
-                />
-              </label>
-              <button class="subscribe" type="submit">
-                Subscribe
-                <svg class="icon-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-Frame-3"></use>
-                </svg>
-              </button>
-            </form>
+          <div>
+            <div class="footer-subs-link">
+              <p class="footer-subs-text">Subscribe</p>
+              <form class="email">
+                <label class="footer-label">
+                  <input
+                    class="footer-input"
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                  />
+                </label>
+                <button class="subscribe" type="submit">
+                  Subscribe
+                  <svg class="icon-footer" width="24" height="24">
+                    <use href="./images/icons.svg#icon-Frame-3"></use>
+                  </svg>
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
