--- a/index.html
+++ b/index.html
@@ -450,31 +450,30 @@
               </li>
             </ul>
           </div>
-          <div>
-            <div class="footer-subs-link">
-              <p class="footer-subs-text">Subscribe</p>
-              <form class="email">
-                <label class="footer-label">
-                  <input
-                    class="footer-input"
-                    type="email"
-                    name="email"
-                    placeholder="E-mail"
-                  />
-                </label>
-                <button class="subscribe" type="submit">
-                  Subscribe
-                  <svg class="icon-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-Frame-3"></use>
-                  </svg>
-                </button>
-              </form>
-            </div>
+
+          <div class="footer-subs-link">
+            <p class="footer-subs-text">Subscribe</p>
+            <form class="email">
+              <label class="footer-label">
+                <input
+                  class="footer-input"
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button class="subscribe" type="submit">
+                Subscribe
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-Frame-3"></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
