--- a/index.html
+++ b/index.html
@@ -417,63 +417,62 @@
             </p>
           </div>
         </div>
-          <div class="footer-icon-list">
-            <p class="footer-icon-text">Social media</p>
-            <ul class="footer-social-message-link">
-              <li class="messenger-icon">
-                <a href="" class="social-icon-hover">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="messenger-icon">
-                <a href="" class="social-icon-hover">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="messenger-icon">
-                <a href="" class="social-icon-hover">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="messenger-icon">
-                <a href="" class="social-icon-hover">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin2"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="footer-subs-link">
-            <p class="footer-subs-text">Subscribe</p>
-            <form class="email">
-              <label class="footer-label">
-                <input
-                  class="footer-input"
-                  type="email"
-                  name="email"
-                  placeholder="E-mail"
-                />
-              </label>
-              <button class="subscribe" type="submit">
-                Subscribe
-                <svg class="icon-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-Frame-3"></use>
+        <div class="footer-icon-list">
+          <p class="footer-icon-text">Social media</p>
+          <ul class="footer-social-message-link">
+            <li class="messenger-icon">
+              <a href="" class="social-icon-hover">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
-              </button>
-            </form>
-          </div>
-        
+              </a>
+            </li>
+            <li class="messenger-icon">
+              <a href="" class="social-icon-hover">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="messenger-icon">
+              <a href="" class="social-icon-hover">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="messenger-icon">
+              <a href="" class="social-icon-hover">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-subs-link">
+          <p class="footer-subs-text">Subscribe</p>
+          <form class="email">
+            <label class="footer-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe" type="submit">
+              Subscribe
+              <svg class="icon-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
-    <div class="backdrop-is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
