--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
       </div>
     </footer>
     <div class="backdrop">
-      <div class="modal">
+      <div class="modal-window">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-Vector"></use>
