--- a/index.html
+++ b/index.html
@@ -405,18 +405,17 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <div class="container-footer-box">
-          <div class="promo">
-            <a class="footer-logo" href="./index.html"
-              >Web<span class="footer-logo-color">Studio</span></a
-            >
-            <p class="footer-logo-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
+      <div class="container footer-container">
+        <div class="promo">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-logo-color">Studio</span></a
+          >
+          <p class="footer-logo-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
         </div>
+
         <div class="footer-icon-list">
           <p class="footer-icon-text">Social media</p>
           <ul class="footer-social-message-link">
@@ -506,7 +505,7 @@
                 id="phone"
                 name="phone"
                 class="input-forma"
-                type="text"
+                type="tel"
                 placeholder="Phone"
               />
               <svg class="icon-forma" width="18" height="24">
@@ -522,7 +521,7 @@
                 id="email"
                 name="email"
                 class="input-forma"
-                type="text"
+                type="email"
                 placeholder="E-mail"
               />
               <svg class="icon-forma" width="18" height="24">
